# simulador-hipotecario

./: .gitignore  README.md  pyproject.toml  requirements.txt   sonar-project.properties  valores_uf.csv
.scannerwork/: report-task.txt
src/simulador_hipotecario/: app.py  calculadora.py  calculadora_pesos.py  utils.py
src/simulador_hipotecario.egg-info/: PKG-INFO  SOURCES.txt
